@@ -14,7 +14,3 @@ grunt.initConfig({
   },
 })
 ```
-
-### Recent Confusion
-
-Many expect this task to work like `cp` on *nix systems but it was designed to use grunt conventions including the use of minimatch regex. We are working hard to make this and other tasks suitable for advanced users but there are no current plans to emulate `cp`.
