@@ -28,7 +28,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt-lib-contrib": "~0.3.0"
+    "grunt-lib-contrib": "~0.4.0"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.0",
