@@ -2,6 +2,7 @@ v0.4.0:
   data: 2012-11-16
   changes:
     - Conversion to grunt v0.4 conventions.
+    - Replace basePath with cwd which is much smarter and understandable.
 v0.3.2:
   date: 2012-10-18
   changes:
